<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food With Friends</string>
    <string name="action_settings">Settings</string>
    <string name="createUserHint">Please Enter Username Here</string>
    <string name="createPassowrdHint">Please Enter Password Here</string>
    <string name="createUserButton">Create New User</string>
    <string name="createEmail">Please Enter Email Here</string>
    <string name="searchHint">Search For Recipe</string>
    <string name="searchButton">Search</string>
    <string name="recipeName">Recipe Name</string>
    <string name="recipeType">Type Of Recipe (Ex. Dinner)</string>
    <string name="recipeTime">Prep &amp; Cook Time</string>
    <string name="recipeIngredients">Enter All Ingredients Here</string>
    <string name="recipeInstructions">Cooking Instructions Here</string>
    <string name="saveNewRecipe">Save Your Recipe</string>
    <string name="takePicture">Take Picture Of Your Recipe</string>

    <color name="purple">#571B7E</color>
    <color name="cream">#F5F5DC</color>

</resources>
