<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:nestedScrollingEnabled="false">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/createRecipeImage" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createRecipeName"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/createRecipeImage"
            android:layout_toEndOf="@+id/createRecipeImage"
            android:layout_marginLeft="5dp"
            android:hint="@string/recipeName"
            android:textSize="17sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createRecipeType"
            android:layout_below="@+id/createRecipeName"
            android:layout_toRightOf="@+id/createRecipeImage"
            android:layout_toEndOf="@+id/createRecipeImage"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/recipeType"
            android:textSize="17sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createRecipeTime"
            android:layout_below="@+id/createRecipeType"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/createRecipeImage"
            android:layout_toEndOf="@+id/createRecipeImage"
            android:layout_marginLeft="5dp"
            android:hint="@string/recipeTime"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:nestedScrollingEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollbars="vertical"
            android:ems="10"
            android:id="@+id/createRecipeIngredients"
            android:layout_marginTop="5dp"
            android:hint="@string/recipeIngredients"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollbars="vertical"
            android:ems="10"
            android:id="@+id/createRecipeInstructions"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/recipeInstructions"
            android:nestedScrollingEnabled="true"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveNewRecipe"
            android:id="@+id/saveNewRecipe"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/takePicture"
            android:id="@+id/takePicture"
            android:layout_above="@+id/saveNewRecipe"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>