<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/cream">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/cream">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createUsername"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/createUserHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createPassword"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/createPassowrdHint"
            android:password="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createEmail"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/createEmail" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:id="@+id/createButton"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@color/purple"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>